--- a/portfolio.html
+++ b/portfolio.html
@@ -12,46 +12,54 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <header>
-      <a class="header-style" href="index.html"><span class="blue-logo">Web</span>Studio</a>
-      <nav>
-        <ul>
-          <li>
-            <a href="index.html" class="black-header">Agencja</a>
-          </li>
-          <li>
-            <a href="portfolio.html" class="black-header">Portfolio</a>
-          </li>
-          <li>
-            <a href="#" class="black-header">Kontakt</a>
-          </li>
+      <div class="container header-container">
+        <a class="header-style" href="index.html"><span class="blue-logo">Web</span>Studio</a>
+        <nav>
+          <ul class="navigation">
+            <li class="navigation-item">
+              <a href="index.html" class="black-header">Agencja</a>
+            </li>
+            <li>
+              <a href="portfolio.html" class="black-header">Portfolio</a>
+            </li>
+            <li>
+              <a href="#" class="black-header">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="header-contact">
+          <li><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
+          <li><a href="tel:+48111111111" class="address">+48 111 111 111</a></li>
         </ul>
-      </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
-        <li><a href="tel:+48111111111" class="address">+48 111 111 111</a></li>
-      </ul>
+      </div>
     </header>
     <main>
-      <section>
-        <ul>
+      <section class="container">
+        <ul class="menu">
           <li><button class="second-button" type="button">Wszystkie</button></li>
           <li><button class="second-button" type="button">Strony</button></li>
           <li><button class="second-button" type="button">Aplikacje</button></li>
           <li><button class="second-button" type="button">Design</button></li>
           <li><button class="second-button" type="button">Marketing</button></li>
         </ul>
-
-        <ul>
+        <ul class="project">
           <li>
             <figure>
               <img alt="laptop" width="370" height="294" src="images/img8.jpg" />
-              <figcaption>
+              <figcaption class="project-description">
                 <h4 class="customers">Technocrack</h4>
-                <p class="position">Strona internetowa</p>
+                <p class="project-type">Strona internetowa</p>
               </figcaption>
             </figure>
           </li>
@@ -59,9 +67,9 @@
           <li>
             <figure>
               <img alt="koszykarze" width="370" height="294" src="images/img9.jpg" />
-              <figcaption>
+              <figcaption class="project-description">
                 <h4 class="customers">Grafika New Orlean vs Golden Star</h4>
-                <p class="position">Dizajn</p>
+                <p class="project-type">Dizajn</p>
               </figcaption>
             </figure>
           </li>
@@ -69,21 +77,19 @@
           <li>
             <figure>
               <img alt="logo restauracji" width="370" height="294" src="images/img10.jpg" />
-              <figcaption>
+              <figcaption class="project-description">
                 <h4 class="customers">Restauracja Seafood</h4>
-                <p class="position">Aplikacja</p>
+                <p class="project-type">Aplikacja</p>
               </figcaption>
             </figure>
           </li>
-        </ul>
 
-        <ul>
           <li>
             <figure>
               <img alt="słuchawki" width="370" height="294" src="images/img11.jpg" />
-              <figcaption>
+              <figcaption class="project-description">
                 <h4 class="customers">Projekt Prime</h4>
-                <p class="position">Marketing</p>
+                <p class="project-type">Marketing</p>
               </figcaption>
             </figure>
           </li>
@@ -91,9 +97,9 @@
           <li>
             <figure>
               <img alt="pudełka" width="370" height="294" src="images/img12.jpg" />
-              <figcaption>
+              <figcaption class="project-description">
                 <h4 class="customers">Projekt Boxes</h4>
-                <p class="position">Aplikacja</p>
+                <p class="project-type">Aplikacja</p>
               </figcaption>
             </figure>
           </li>
@@ -101,21 +107,19 @@
           <li>
             <figure>
               <img alt="monitor" width="370" height="294" src="images/img13.jpg" />
-              <figcaption>
+              <figcaption class="project-description">
                 <h4 class="customers">Inspiration has no Borders</h4>
-                <p class="position">Strona internetowa</p>
+                <p class="project-type">Strona internetowa</p>
               </figcaption>
             </figure>
           </li>
-        </ul>
 
-        <ul>
           <li>
             <figure>
               <img alt="magazyn" width="370" height="294" src="images/img14.jpg" />
-              <figcaption>
+              <figcaption class="project-description">
                 <h4 class="customers">Magazyn Limited Edition</h4>
-                <p class="position">Dizajn</p>
+                <p class="project-type">Dizajn</p>
               </figcaption>
             </figure>
           </li>
@@ -123,9 +127,9 @@
           <li>
             <figure>
               <img alt="etykieta" width="370" height="294" src="images/img15.jpg" />
-              <figcaption>
+              <figcaption class="project-description">
                 <h4 class="customers">Projekt LAB</h4>
-                <p class="position">Marketing</p>
+                <p class="project-type">Marketing</p>
               </figcaption>
             </figure>
           </li>
@@ -133,9 +137,9 @@
           <li>
             <figure>
               <img alt="laptop" width="370" height="294" src="images/img16.jpg" />
-              <figcaption>
+              <figcaption class="project-description">
                 <h4 class="customers">Growing Business</h4>
-                <p class="position">Aplikacja</p>
+                <p class="project-type">Aplikacja</p>
               </figcaption>
             </figure>
           </li>
@@ -143,16 +147,18 @@
       </section>
     </main>
     <footer class="backgroud">
-      <a class="footer-style" href="index.html"><span class="blue-logo">Web</span>Studio</a>
-      <address>
-        <ul>
-          <li>
-            <p class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
-          </li>
-          <li><a class="address" href="mailto:info@example.com">info@example.com</a></li>
-          <li><a class="address" href="tel:+48111111111">+48 111 111 111</a></li>
-        </ul>
-      </address>
+      <div class="container footer-container">
+        <a class="footer-style" href="index.html"><span class="blue-logo">Web</span>Studio</a>
+        <address>
+          <ul>
+            <li>
+              <p class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
+            </li>
+            <li><a class="address" href="mailto:info@example.com">info@example.com</a></li>
+            <li><a class="address" href="tel:+48111111111">+48 111 111 111</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
