https://github.com/furnalis/goit-markup-hw-03.git

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <button type="button" class="first-button">Zamów usługę</button>
         </section>
       </div>
-      <section>
+      <section class="section">
         <ul class="lorem-list container">
           <li class="lorem-item">
             <h3 class="lorem-ipsum">LOREM IPSUM</h3>
