--- a/portfolio.html
+++ b/portfolio.html
@@ -45,106 +45,108 @@
       </div>
     </header>
     <main>
-      <section class="container">
-        <ul class="menu">
-          <li><button class="second-button" type="button">Wszystkie</button></li>
-          <li><button class="second-button" type="button">Strony</button></li>
-          <li><button class="second-button" type="button">Aplikacje</button></li>
-          <li><button class="second-button" type="button">Design</button></li>
-          <li><button class="second-button" type="button">Marketing</button></li>
-        </ul>
-        <ul class="project">
-          <li>
-            <figure>
-              <img alt="laptop" width="370" height="294" src="images/img8.jpg" />
-              <figcaption class="project-description">
-                <h4 class="customers">Technocrack</h4>
-                <p class="project-type">Strona internetowa</p>
-              </figcaption>
-            </figure>
-          </li>
+      <div class="container">
+        <section class="section">
+          <ul class="menu">
+            <li><button class="second-button" type="button">Wszystkie</button></li>
+            <li><button class="second-button" type="button">Strony</button></li>
+            <li><button class="second-button" type="button">Aplikacje</button></li>
+            <li><button class="second-button" type="button">Design</button></li>
+            <li><button class="second-button" type="button">Marketing</button></li>
+          </ul>
+          <ul class="project">
+            <li>
+              <figure>
+                <img alt="laptop" width="370" height="294" src="images/img8.jpg" />
+                <figcaption class="project-description">
+                  <h4 class="customers">Technocrack</h4>
+                  <p class="project-type">Strona internetowa</p>
+                </figcaption>
+              </figure>
+            </li>
 
-          <li>
-            <figure>
-              <img alt="koszykarze" width="370" height="294" src="images/img9.jpg" />
-              <figcaption class="project-description">
-                <h4 class="customers">Grafika New Orlean vs Golden Star</h4>
-                <p class="project-type">Dizajn</p>
-              </figcaption>
-            </figure>
-          </li>
+            <li>
+              <figure>
+                <img alt="koszykarze" width="370" height="294" src="images/img9.jpg" />
+                <figcaption class="project-description">
+                  <h4 class="customers">Grafika New Orlean vs Golden Star</h4>
+                  <p class="project-type">Dizajn</p>
+                </figcaption>
+              </figure>
+            </li>
 
-          <li>
-            <figure>
-              <img alt="logo restauracji" width="370" height="294" src="images/img10.jpg" />
-              <figcaption class="project-description">
-                <h4 class="customers">Restauracja Seafood</h4>
-                <p class="project-type">Aplikacja</p>
-              </figcaption>
-            </figure>
-          </li>
+            <li>
+              <figure>
+                <img alt="logo restauracji" width="370" height="294" src="images/img10.jpg" />
+                <figcaption class="project-description">
+                  <h4 class="customers">Restauracja Seafood</h4>
+                  <p class="project-type">Aplikacja</p>
+                </figcaption>
+              </figure>
+            </li>
 
-          <li>
-            <figure>
-              <img alt="słuchawki" width="370" height="294" src="images/img11.jpg" />
-              <figcaption class="project-description">
-                <h4 class="customers">Projekt Prime</h4>
-                <p class="project-type">Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
+            <li>
+              <figure>
+                <img alt="słuchawki" width="370" height="294" src="images/img11.jpg" />
+                <figcaption class="project-description">
+                  <h4 class="customers">Projekt Prime</h4>
+                  <p class="project-type">Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
 
-          <li>
-            <figure>
-              <img alt="pudełka" width="370" height="294" src="images/img12.jpg" />
-              <figcaption class="project-description">
-                <h4 class="customers">Projekt Boxes</h4>
-                <p class="project-type">Aplikacja</p>
-              </figcaption>
-            </figure>
-          </li>
+            <li>
+              <figure>
+                <img alt="pudełka" width="370" height="294" src="images/img12.jpg" />
+                <figcaption class="project-description">
+                  <h4 class="customers">Projekt Boxes</h4>
+                  <p class="project-type">Aplikacja</p>
+                </figcaption>
+              </figure>
+            </li>
 
-          <li>
-            <figure>
-              <img alt="monitor" width="370" height="294" src="images/img13.jpg" />
-              <figcaption class="project-description">
-                <h4 class="customers">Inspiration has no Borders</h4>
-                <p class="project-type">Strona internetowa</p>
-              </figcaption>
-            </figure>
-          </li>
+            <li>
+              <figure>
+                <img alt="monitor" width="370" height="294" src="images/img13.jpg" />
+                <figcaption class="project-description">
+                  <h4 class="customers">Inspiration has no Borders</h4>
+                  <p class="project-type">Strona internetowa</p>
+                </figcaption>
+              </figure>
+            </li>
 
-          <li>
-            <figure>
-              <img alt="magazyn" width="370" height="294" src="images/img14.jpg" />
-              <figcaption class="project-description">
-                <h4 class="customers">Magazyn Limited Edition</h4>
-                <p class="project-type">Dizajn</p>
-              </figcaption>
-            </figure>
-          </li>
+            <li>
+              <figure>
+                <img alt="magazyn" width="370" height="294" src="images/img14.jpg" />
+                <figcaption class="project-description">
+                  <h4 class="customers">Magazyn Limited Edition</h4>
+                  <p class="project-type">Dizajn</p>
+                </figcaption>
+              </figure>
+            </li>
 
-          <li>
-            <figure>
-              <img alt="etykieta" width="370" height="294" src="images/img15.jpg" />
-              <figcaption class="project-description">
-                <h4 class="customers">Projekt LAB</h4>
-                <p class="project-type">Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
+            <li>
+              <figure>
+                <img alt="etykieta" width="370" height="294" src="images/img15.jpg" />
+                <figcaption class="project-description">
+                  <h4 class="customers">Projekt LAB</h4>
+                  <p class="project-type">Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
 
-          <li>
-            <figure>
-              <img alt="laptop" width="370" height="294" src="images/img16.jpg" />
-              <figcaption class="project-description">
-                <h4 class="customers">Growing Business</h4>
-                <p class="project-type">Aplikacja</p>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
-      </section>
+            <li>
+              <figure>
+                <img alt="laptop" width="370" height="294" src="images/img16.jpg" />
+                <figcaption class="project-description">
+                  <h4 class="customers">Growing Business</h4>
+                  <p class="project-type">Aplikacja</p>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <footer class="backgroud">
       <div class="container footer-container">
