--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
     <main>
       <div class="backgroud">
-        <section class="big-container container">
+        <section class="big-container container section">
           <h1 class="big-text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
           <button type="button" class="first-button">Zamów usługę</button>
         </section>
@@ -82,7 +82,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section">
         <h2 class="first-header">Czym się zajmujemy</h2>
         <ul class="job-list container">
           <li><img alt="Programowanie" width="370" height="294" src="images/img1.jpg" /></li>
