https://github.com/furnalis/goit-markup-hw-03.git

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
             </p>
           </li>
         </ul>
-      </section>
-      <section class="section">
+
         <h2 class="first-header">Czym się zajmujemy</h2>
         <ul class="job-list container">
           <li><img alt="Programowanie" width="370" height="294" src="images/img1.jpg" /></li>
@@ -90,8 +89,9 @@
           <li><img alt="Tablety" width="370" height="294" src="images/img3.jpg" /></li>
         </ul>
       </section>
-      <section class="squad">
-        <h2 class="first-header">Nasz zespół</h2>
+
+      <section class="squad section">
+        <h2 class="second-header">Nasz zespół</h2>
         <ul class="job-list container">
           <li class="squad-item">
             <figure>
