https://github.com/furnalis/goit-markup-hw-03.git

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
       </div>
     </header>
     <main>
-      <div class="backgroud">
-        <section class="big-container container section">
+      <section class="backgroud">
+        <div class="big-container container section">
           <h1 class="big-text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
           <button type="button" class="first-button">Zamów usługę</button>
-        </section>
-      </div>
+        </div>
+      </section>
       <section class="section">
         <ul class="lorem-list container">
           <li class="lorem-item">
