https://github.com/furnalis/goit-markup-hw-03.git

--- a/index.html
+++ b/index.html
@@ -81,58 +81,61 @@
             </p>
           </li>
         </ul>
-
-        <h2 class="first-header">Czym się zajmujemy</h2>
-        <ul class="job-list container">
-          <li><img alt="Programowanie" width="370" height="294" src="images/img1.jpg" /></li>
-          <li><img alt="Aplikacje" width="370" height="294" src="images/img2.jpg" /></li>
-          <li><img alt="Tablety" width="370" height="294" src="images/img3.jpg" /></li>
-        </ul>
+        <section>
+          <h2 class="first-header">Czym się zajmujemy</h2>
+          <ul class="job-list container">
+            <li><img alt="Programowanie" width="370" height="294" src="images/img1.jpg" /></li>
+            <li><img alt="Aplikacje" width="370" height="294" src="images/img2.jpg" /></li>
+            <li><img alt="Tablety" width="370" height="294" src="images/img3.jpg" /></li>
+          </ul>
+        </section>
       </section>
 
       <section class="squad section">
-        <h2 class="second-header">Nasz zespół</h2>
-        <ul class="job-list container">
-          <li class="squad-item">
-            <figure>
-              <img alt="Mężczyzna" width="270" height="260" src="images/img4.jpg" />
-              <figcaption>
-                <h4 class="name">John Doe</h4>
-                <p class="position">Product Designer</p>
-              </figcaption>
-            </figure>
-          </li>
+        <div class="container">
+          <h2 class="second-header">Nasz zespół</h2>
+          <ul class="job-list container">
+            <li class="squad-item">
+              <figure>
+                <img alt="Mężczyzna" width="270" height="260" src="images/img4.jpg" />
+                <figcaption>
+                  <h4 class="name">John Doe</h4>
+                  <p class="position">Product Designer</p>
+                </figcaption>
+              </figure>
+            </li>
 
-          <li class="squad-item">
-            <figure>
-              <img alt="Kobieta" width="270" height="260" src="images/img5.jpg" />
-              <figcaption>
-                <h4 class="name">John Doe</h4>
-                <p class="position">Frontend Developer</p>
-              </figcaption>
-            </figure>
-          </li>
+            <li class="squad-item">
+              <figure>
+                <img alt="Kobieta" width="270" height="260" src="images/img5.jpg" />
+                <figcaption>
+                  <h4 class="name">John Doe</h4>
+                  <p class="position">Frontend Developer</p>
+                </figcaption>
+              </figure>
+            </li>
 
-          <li class="squad-item">
-            <figure>
-              <img alt="Mężczyzna" width="270" height="260" src="images/img6.jpg" />
-              <figcaption>
-                <h4 class="name">John Doe</h4>
-                <p class="position">Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
+            <li class="squad-item">
+              <figure>
+                <img alt="Mężczyzna" width="270" height="260" src="images/img6.jpg" />
+                <figcaption>
+                  <h4 class="name">John Doe</h4>
+                  <p class="position">Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
 
-          <li class="squad-item">
-            <figure>
-              <img alt="Mężczyzna" width="270" height="260" src="images/img7.jpg" />
-              <figcaption>
-                <h4 class="name">John Doe</h4>
-                <p class="position">UI Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
+            <li class="squad-item">
+              <figure>
+                <img alt="Mężczyzna" width="270" height="260" src="images/img7.jpg" />
+                <figcaption>
+                  <h4 class="name">John Doe</h4>
+                  <p class="position">UI Designer</p>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="backgroud">
